# damru

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LEGAL.md  LICENSE  README.md  SECURITY.md  context7.json  damru-redroid-latest.tar.sha256  example.py  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: unit-tests.yml
chrome-apks/: README.md
damru/: README.md  __init__.py  __main__.py  adb.py  apk_assets.py  async_core.py  benchmark.py  bypass.py  cdp.py  chrome.py  cli.py  config.py  config.py.linux  config.py.windows  core.py  devices.py  docker.py  mumu.py  netfix.py  pool.py  profile_apply.py  profiles.py  proxy.py  proxy_bridge.py  proxy_runtime.py  root.py  utils.py  webview_native_patch.py
damru.egg-info/: SOURCES.txt
damru/playwright_patch/: __init__.py  crPage.js
damru/ui/: __init__.py  server.py
damru/ui/static/: app.js  index.html  styles.css
damru/wsl_kernel/: README.md  SHA256SUMS  __init__.py
damru/wsl_kernel/source_metadata/: SHA256SUMS  damru-wsl-kernel-nat-build.config.old  damru-wsl-kernel-nat-build.info  damru-wsl-kernel-nat-build.kernel_config_data
docs/: AUTOMATION_GAPS_PLAN.md  BROWSERS_BENCHMARK_REPORT.md  DEVICE_PROFILES.md  IMAGE_AUTOPULL_FIX.md  PROOF.md  PYTHON_API.md  README.md  UI.md  VIEWER.md  WSL_FALLBACK_TEST_RESULTS.md  WSL_KERNEL.md
docs/assets/proof/: ubuntu-proof.json
docs/assets/proof/sites/: proof-sites.json
native/: README.md  libfakemem.c  strace_chrome.sh  test_mem.c  test_mem_x86_64  test_sysconf  test_sysconf.c  uinput_touchscreen.c  version.map  vulkan_layer.c
research/: android-virtualization-alternatives.md
research/new/: 2.md  You are a senior Linux kernel, Docker networking,.md
scripts/: README.md  bake_image.py  capture_proof.py  run_browsers_benchmark_damru.py  socks_http_bridge.py
tests/: README.md  benchmark_auto.py  capture_real_creepjs.py  capture_redroid_creepjs.py  check_gpu_baseline.py  conftest.py  monitor.sh  monitor_container.sh  patch_vendorid.py  probe.py  run_gpu_test.py  setup_and_test.sh  test_apk_assets.py  test_battery_creepjs.py  test_benchmark_sites.py  test_browserscan_bot.py  test_cdp_gpu.py  test_chrome_client_hints.py  test_chromium_package_hardening.py  test_creepjs.py  test_creepjs_debug.py  test_creepjs_worker.py  test_damru_e2e.py  test_device_profiles_unit.py  test_devtools_fix.py  test_devtools_fix2.py  test_devtools_patch.py  test_e2e.py  test_fingerprint_fix.py  test_fingerprint_only.py  test_fingerprint_solo.py  test_fixes.py  test_fp_report.py  test_gpu_cdp.py  test_gpu_full.py  test_gpu_manual.py  test_gpu_patch.py  test_gpu_spoof.py  test_hardware.py  test_hw_sites.py  (+38 more)
tools/: README.md
