[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "damru"
version = "0.1.0"
description = "Stealth browser automation on Android via ADB + root-level system prop spoofing"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40,<1.60",
    "requests>=2.28",
    "pysocks>=1.7",
    "websockets>=12",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "aiohttp"]

[project.scripts]
damru = "damru.cli:main"
damru-benchmark = "damru.benchmark:main"

[tool.setuptools.packages.find]
include = ["damru*"]

[tool.setuptools.package-data]
"damru.playwright_patch" = ["*.js"]
"damru.wsl_kernel" = ["wsl2-kernel-*", "*.config", "SHA256SUMS", "README.md", "source_metadata/*"]
"damru.assets" = ["magisk.apk", "libfakemem.c"]
"damru.ui" = ["static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "unit: fast tests that do not require Android, Docker, browser automation, or live network access",
    "adb: tests that require an ADB server or Android device/emulator",
    "docker: tests that require Docker/Redroid inside Linux or WSL",
    "network: tests that make live network requests or hit external websites",
    "e2e: end-to-end tests that exercise full Damru sessions",
    "gpu: tests that validate GPU/native graphics spoofing behavior",
]
